Add theme settings to config.toml
Added theme configuration for Streamlit app.

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,1 +1,7 @@
-
+[theme]
+base = "light"
+primaryColor = "#6B7280"
+backgroundColor = "#FAFAF9"
+secondaryBackgroundColor = "#F1F5F9"
+textColor = "#1F2937"
+font = "sans serif"
